# skuba-manipulation

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/skuba_edu_description/share/skuba_edu_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/skuba_edu_description/share/skuba_edu_description/cmake/: skuba_edu_descriptionConfig.cmake
install/skuba_edu_description/share/skuba_edu_description/meshes/arm/: gripper_left.STL  gripper_right.STL
install/skuba_edu_description/share/skuba_edu_description/robots/: angus_kobuki_hexagons_kinect_kinect.urdf.xacro  angus_rcj2023_no_arm_and_cam.urdf.xacro
install/skuba_edu_description/share/skuba_edu_description/urdf/: angus_common_library.urdf.xacro  angus_gazebo.urdf.xacro
install/skuba_edu_manipulation/share/skuba_edu_manipulation/: package.bash  package.zsh
log/: latest_build
src/skuba_arm/: CMakeLists.txt  README.md  package.xml
src/skuba_arm/src/: dynamixelControl.cpp
src/skuba_arm_control/: CMakeLists.txt  README.md  package.xml
src/skuba_arm_control/launch/: arm_controller.launch.py  arm_planner.launch.py
src/skuba_arm_control/src/: arm_controller.cpp  arm_planner.cpp
src/skuba_edu_description/: CMakeLists.txt
src/skuba_edu_description/meshes/arm/: arm_base_link.STL  arm_link_1.STL  arm_link_2.STL  arm_link_3.STL
src/skuba_edu_description/meshes/camera/: cam_dynamixel_link_1.STL
src/skuba_edu_description/robots/: angus_kobuki_hexagons_kinect_lidar.urdf.xacro  angus_kobuki_hexagons_realsense_lidar.urdf.xacro  angus_rcj2023.urdf.xacro
src/skuba_edu_description/urdf/arm/: arm.urdf.xacro  arm_moveit.urdf  arm_moveit.urdf.xacro  arm_no_gripper.urdf  arm_no_gripper.urdf.xacro
src/skuba_edu_description/urdf/camera/: cam._ogurdf.xacro
src/skuba_edu_description/urdf/sensors/: angus_d415.urdf.xacro  kinect.urdf.xacro  rplidar.urdf.xacro
src/skuba_edu_manipulation/: .setup_assistant  CMakeLists.txt  README.md  package.xml
src/skuba_edu_manipulation/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/skuba_edu_manipulation/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/skuba_edu_manipulation/src/: arm_controller.cpp  ik_solver.cpp
src/skuba_msgs/: CMakeLists.txt  README.md
src/skuba_msgs/srv/: ArmCommand.srv  ArmPosition.srv  ArmPositionReader.srv  ArmTrajectory.srv
(+6 files in other folders)
